# PopLib

./: .gitignore  CHANGELOG  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  NOTICE  README.md  SECURITY.md
.github/workflows/: build.yml
PopLib/: CMakeLists.txt  appbase.cpp  appbase.hpp  common.cpp  common.hpp  popapp.cpp  popapp.hpp
PopLib/api/: discord.cpp  discord.hpp  steam.cpp  steam.hpp
PopLib/audio/: aureader.hpp  bassmusicinterface.cpp  bassmusicinterface.hpp  musicinterface.hpp  openalsoundinstance.cpp  openalsoundinstance.hpp  openalsoundmanager.cpp  openalsoundmanager.hpp  openmptmusicinterface.cpp  openmptmusicinterface.hpp  soundinstance.hpp  soundmanager.hpp
PopLib/chipmunk/: cpBody.c
PopLib/debug/: debug.hpp  log.cpp  log.hpp  memmgr.cpp  memmgr.hpp  perftimer.hpp  sehcatcher.cpp  sehcatcher.hpp
PopLib/graphics/: color.cpp  color.hpp  font.hpp  gpuimage.cpp  gpuimage.hpp  graphics.cpp  graphics.hpp  image.hpp  imagefont.cpp  imagefont.hpp  memoryimage.cpp  memoryimage.hpp  quantize.hpp  renderer.cpp  renderer.hpp  sharedimage.cpp  sharedimage.hpp  sysfont.cpp  sysfont.hpp
PopLib/graphics/HeaderFont/: LiberationSansRegular.h
PopLib/graphics/Inc/: MI_SlowStretchBlt.inc
PopLib/graphics/SWTri/: SWTri.cpp  SWTri.hpp
PopLib/graphics/renderer/: apitester.cpp  apitester.hpp  glimage.cpp  glimage.hpp  glrenderer.cpp  glrenderer.hpp  glshader.cpp  glshader.hpp  sdlimage.cpp  sdlimage.hpp  sdlrenderer.cpp  sdlrenderer.hpp
PopLib/imagelib/: imagelib.cpp  imagelib.hpp
PopLib/imgui/: imguimanager.cpp  imguimanager.hpp
PopLib/math/: math.hpp  matrix.hpp  mtrand.hpp  point.hpp  ratio.hpp  rect.hpp  trivertex.hpp  vector.hpp
PopLib/misc/: autocrit.hpp  buffer.cpp  buffer.hpp  critsect.hpp  flags.hpp  httptransfer.cpp  httptransfer.hpp  keycodes.hpp  profile.hpp  smartptr.hpp  workerthread.hpp
PopLib/paklib/: gpak.hpp  pakinterface.cpp  pakinterface.hpp
PopLib/physics/: physics.cpp  physics.hpp  physicslistener.hpp
PopLib/readwrite/: descparser.hpp  jsonparser.hpp  modval.hpp  xmlparser.cpp  xmlparser.hpp  xmlwriter.hpp
PopLib/resources/: propertiesparser.cpp  propertiesparser.hpp  resourcemanager.cpp  resourcemanager.hpp
PopLib/scripting/: scripting_base.cpp  scripting_base.hpp
PopLib/scripting/lua/: lcolor.cpp  lkeycodes.cpp  lmatrix.cpp  lpoint.cpp  lpoplib.cpp  lpoplib.hpp  lrect.cpp
PopLib/sol/: forward.hpp  sol.hpp
PopLib/todlib/: attachment.cpp  attachment.hpp  dataarray.hpp  definition.cpp  definition.hpp  effectsystem.cpp  effectsystem.hpp  filtereffect.cpp  filtereffect.hpp  reanimatlas.cpp  reanimatlas.hpp  reanimator.cpp  reanimator.hpp  todcommon.cpp  todcommon.hpp  toddebug.cpp  toddebug.hpp  toddrawtriangle.cpp  toddrawtriangleinc.cpp  todfoley.cpp  todfoley.hpp  todlist.cpp  todlist.hpp  todparticle.cpp  todparticle.hpp  todstringfile.cpp  todstringfile.hpp  trail.cpp  trail.hpp
PopLib/widget/: buttonlistener.hpp  buttonwidget.hpp  checkbox.hpp  checkboxlistener.hpp  cursorwidget.hpp  dialog.cpp  dialog.hpp  dialogbutton.hpp  dialoglistener.hpp  editlistener.hpp  editwidget.cpp  editwidget.hpp  hyperlinkwidget.hpp  insets.hpp  listlistener.hpp  listwidget.cpp  listwidget.hpp  scrollbarwidget.hpp  scrollbuttonwidget.hpp  scrolllistener.hpp  slider.cpp  slider.hpp  sliderlistener.hpp  textwidget.cpp  textwidget.hpp  widget.cpp  widget.hpp  widgetcontainer.cpp  widgetcontainer.hpp  widgetmanager.cpp  widgetmanager.hpp
docs/: getting_started.md  migrating.md
examples/: CMakeLists.txt  README.md
examples/src/: res.cpp  res.hpp
examples/src/barebones/: CMakeLists.txt  board.hpp
examples/src/physicsdemo/: CMakeLists.txt  board.cpp  board.hpp  gameapp.cpp  gameapp.hpp  main.cpp
examples/src/tetris/: CMakeLists.txt  board.cpp  board.hpp  gameapp.cpp  gameapp.hpp  main.cpp
examples/src/v14demo/: CMakeLists.txt  board.cpp  board.hpp  demowidget.hpp  main.cpp  v14demoapp.cpp  v14demoapp.hpp
private/steam/: README
